# stm32f30x-hal

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
ci/: install.sh  script.sh
src/: delay.rs  flash.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  rcc.rs  serial.rs  spi.rs  timer.rs
