[package]
name = "stm32f30x-hal"
version = "0.1.0"
authors = ["Jorge Aparicio <jorge@japaric.io>"]

[dependencies]
cortex-m = { git = "https://github.com/japaric/cortex-m" }
embedded-hal = { git = "https://github.com/japaric/embedded-hal", branch = "v1" }
nb = "0.1.0"
stm32f30x = { git = "https://github.com/japaric/stm32f30x" }

[dependencies.cast]
default-features = false
version = "0.2.2"
