[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F30x family of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f30x-hal"
repository = "https://github.com/japaric/stm32f30x-hal"
version = "0.2.0"

[dependencies]
cortex-m = "0.5.0"
embedded-hal = "0.2.0"
nb = "0.1.0"
stm32f30x = "0.7.0"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[features]
rt = ["stm32f30x/rt"]
